# mcp

./: .gitignore  .gitleaks.toml  .secrets.baseline  404.html  DESIGN_GUIDELINES.md  DEVELOPER_GUIDE.md  README.md  VIBE_CODING_TIPS_TRICKS.md  index.html  sitemap.xml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  support_awslabs_mcp_servers.yml
.github/workflows/: RELEASE_INSTRUCTIONS.md  aws-api-mcp-upgrade-version.yml  bandit.yml  cfn_nag.yml  check-gh-pages-builds.yml  check-license-header-slash.txt  check-license-header.json  check-license-header.yml  checkov.yml  codeql.yml  dependency-review-action.yml  detect-secrets-requirements.txt  gh-pages.yml  merge-prevention.yml  powershell.yml  pre-commit-requirements.txt  pre-commit.yml  pull-request-lint.yml  python.yml  release-initiate-branch.yml  release-merge-tag.yml  release.yml  scanners.yml  scorecard-analysis.yml  semgrep-requirements.txt  semgrep.yml  stale.yml  trivy.yml  typescript.yml
docs/: migration-bedrock-data-automation.md  migration-ccapi.md  migration-cfn.md  migration-cloudwatch-appsignals.md  migration-core.md  migration-cost-explorer.md  migration-diagram.md  migration-git-repo-research.md  migration-nova-canvas.md  migration-terraform.md
docusaurus/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docusaurus/docs/: installation.md  intro.md
samples/: README.md  index.html
samples/cloudwatch-applicationsignals-mcp/: README.md
samples/mcp-integration-with-kb/: index.html
scripts/: README.md  verify_package_name.py  verify_tool_names.py
search/: search_index.json
servers/amazon-mq-mcp-server/: index.html
servers/amazon-neptune-mcp-server/: index.html
servers/amazon-sns-sqs-server/: index.html
servers/aurora-dsql-mcp-server/: index.html
servers/aws-diagram-mcp-server/: index.html
servers/aws-documentation-mcp-server/: index.html
servers/aws-location-mcp-server/: index.html
servers/aws-pricing-mcp-server/: index.html
servers/aws-serverless-mcp-server/: index.html
servers/aws-support-mcp-server/: index.html
servers/bedrock-kb-retrieval-mcp-server/: index.html
servers/cdk-mcp-server/: index.html
servers/cfn-mcp-server/: index.html
servers/cloudwatch-logs-mcp-server/: index.html
servers/code-doc-gen-mcp-server/: index.html
servers/core-mcp-server/: index.html
servers/cost-analysis-mcp-server/: index.html
servers/documentdb-mcp-server/: index.html
servers/dynamodb-mcp-server/: index.html
servers/ecs-mcp-server/: index.html
servers/eks-mcp-server/: index.html
servers/finch-mcp-server/: index.html
servers/frontend-mcp-server/: index.html
servers/git-repo-research-mcp-server/: index.html
servers/kendra-index-mcp-server/: index.html
servers/lambda-mcp-server/: index.html
servers/lambda-tool-mcp-server/: index.html
servers/memcached-mcp-server/: index.html
servers/mysql-mcp-server/: index.html
servers/nova-canvas-mcp-server/: index.html
servers/postgres-mcp-server/: index.html
servers/stepfunctions-tool-mcp-server/: index.html
servers/syntheticdata-mcp-server/: index.html
servers/terraform-mcp-server/: index.html
servers/valkey-mcp-server/: index.html
src/amazon-bedrock-agentcore-mcp-server/: CHANGELOG.md  Dockerfile  NOTICE  README.md  SECURITY.md  docker-healthcheck.sh  pyproject.toml
src/amazon-kendra-index-mcp-server/: Dockerfile  README.md  docker-healthcheck.sh  pyproject.toml
src/amazon-keyspaces-mcp-server/: README.md  pyproject.toml
src/amazon-mq-mcp-server/: Dockerfile  README.md  docker-healthcheck.sh  pyproject.toml
src/amazon-neptune-mcp-server/: Dockerfile  docker-healthcheck.sh  pyproject.toml
src/amazon-qbusiness-anonymous-mcp-server/: Dockerfile  README.md  docker-healthcheck.sh  pyproject.toml
src/amazon-qindex-mcp-server/: README.md  pyproject.toml
src/amazon-rekognition-mcp-server/: Dockerfile  pyproject.toml
src/amazon-sns-sqs-mcp-server/: Dockerfile  README.md  docker-healthcheck.sh  pyproject.toml
src/amazon-translate-mcp-server/: pyproject.toml
src/aurora-dsql-mcp-server/: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-healthcheck.sh  pyproject.toml  test_tools.md
src/aws-api-mcp-server/: CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  MIGRATION.md  README.md  docker-healthcheck.sh  pyproject.toml
src/aws-appsync-mcp-server/: .dockerignore  .gitignore  Dockerfile  NOTICE  README.md  docker-healthcheck.sh  pyproject.toml
src/aws-bedrock-custom-model-import-mcp-server/: Dockerfile  README.md  pyproject.toml
src/aws-bedrock-data-automation-mcp-server/: DO_NOT_RELEASE  Dockerfile  README.md  docker-healthcheck.sh  pyproject.toml
src/aws-dataprocessing-mcp-server/: README.md  (+3 more)
src/mssql-mcp-server/: CHANGELOG.md  Dockerfile  NOTICE  README.md  docker-healthcheck.sh  pyproject.toml  uv-requirements.txt
src/mssql-mcp-server/awslabs/mssql_mcp_server/: __init__.py  mutable_sql_detector.py  server.py
src/mssql-mcp-server/awslabs/mssql_mcp_server/connection/: abstract_db_connection.py  db_connection_map.py  pymssql_pool_connection.py
src/mssql-mcp-server/tests/: conftest.py  test_abstract_db_connection.py  test_db_connection_map.py  test_endpoint_validation.py  test_injection_false_positives.py  test_pool_exhaustion_and_expiry.py  test_pymssql_pool_connection.py  test_pymssql_pool_extended.py  test_server.py  test_server_extended.py
src/mssql-mcp-server/tests/e2e/: conftest.py  e2e_integration_test.py
src/roda-mcp-server/: NOTICE.md  README.md  SECURITY.md  pyproject.toml
src/roda-mcp-server/awslabs/roda_mcp_server/: __init__.py  aws_client.py  knowledge_base.py  server.py
src/roda-mcp-server/docs/: architecture.drawio  high-level-design.md
src/roda-mcp-server/examples/: example_usage.md
src/roda-mcp-server/tests/: conftest.py  test_aws_client.py  test_checksum_validation.py  test_details.py  test_knowledge_base.py  test_list.py  test_preview.py  test_sample.py  test_search.py  test_server.py
testing/: README.md  mcp_test_client.py  mcp_test_runner.py  pytest_utils.py  types.py
(+2065 files in other folders)
